--- a/server_rules/building/index.html
+++ b/server_rules/building/index.html
@@ -698,6 +698,9 @@
 <li>公共建筑 <strong>必须</strong> 通路</li>
 <li><strong>禁止</strong> 在他人建筑上空造巨大建筑物</li>
 <li>不同风格建筑物 <strong>禁止</strong> 连在一起</li>
+<li>红石、铁路建筑 <strong>禁止</strong> 放水造成损坏</li>
+<li>木制建筑附近 <strong>禁止</strong> 放置岩浆，使用打火石</li>
+<li><strong>禁止</strong> 私自使原木去皮</li>
 </ol>
 <p>编辑于 2021.7.24 雾羽幽灵</p>
                 
